--- a/SeqChat/Base.lproj/LaunchScreen.storyboard
+++ b/SeqChat/Base.lproj/LaunchScreen.storyboard
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="8150" systemVersion="15A204g" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES" initialViewController="01J-lp-oVM">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="9060" systemVersion="15B42" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES" initialViewController="01J-lp-oVM">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="8122"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9051"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
@@ -13,15 +14,47 @@
                         <viewControllerLayoutGuide type="bottom" id="xb3-aO-Qok"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="Ze5-6b-2t3">
-                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView userInteractionEnabled="NO" contentMode="top" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="LOGO_sequenia.png" translatesAutoresizingMaskIntoConstraints="NO" id="MFW-wm-nsz">
+                                <rect key="frame" x="0.0" y="20" width="320" height="30"/>
+                                <animations/>
+                            </imageView>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="sequenia_logo.png" translatesAutoresizingMaskIntoConstraints="NO" id="R7q-uf-lRH">
+                                <rect key="frame" x="40" y="193" width="240" height="182"/>
+                                <animations/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="240" id="HQm-29-bG9"/>
+                                    <constraint firstAttribute="height" constant="182" id="TiP-MR-H4l"/>
+                                </constraints>
+                            </imageView>
+                        </subviews>
                         <animations/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstAttribute="trailing" secondItem="MFW-wm-nsz" secondAttribute="trailing" id="D2b-r5-9wx"/>
+                            <constraint firstItem="R7q-uf-lRH" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="KTu-BZ-efG"/>
+                            <constraint firstItem="MFW-wm-nsz" firstAttribute="top" secondItem="Llm-lL-Icb" secondAttribute="bottom" id="W5a-ju-X1b"/>
+                            <constraint firstItem="xb3-aO-Qok" firstAttribute="top" secondItem="MFW-wm-nsz" secondAttribute="bottom" id="diy-T7-FOu"/>
+                            <constraint firstItem="MFW-wm-nsz" firstAttribute="leading" secondItem="Ze5-6b-2t3" secondAttribute="leading" id="fu1-IN-GGS"/>
+                            <constraint firstItem="R7q-uf-lRH" firstAttribute="centerY" secondItem="Ze5-6b-2t3" secondAttribute="centerY" id="iD1-Ac-sqC"/>
+                        </constraints>
+                        <variation key="default">
+                            <mask key="constraints">
+                                <exclude reference="diy-T7-FOu"/>
+                            </mask>
+                        </variation>
                     </view>
+                    <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina4"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="iYj-Kq-Ea1" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="53" y="375"/>
+            <point key="canvasLocation" x="287" y="339"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="LOGO_sequenia.png" width="117" height="30"/>
+        <image name="sequenia_logo.png" width="239" height="339"/>
+    </resources>
 </document>
